@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+7/20/12
+    - Added utility function @opt_model/describe_idx() to indentify
+      variable, constraint or cost row indices to aid in debugging.
+
 7/18/12
     - Made N optional field (default is identity matrix) in
       @opt_model/add_costs().
